Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25629

qt_ntfs_permission_lookup fails for long file names

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.0.0
    • 5.0.0
    • Core: I/O
    • None
    • 2380765a2b4563bc714f947927d2cd48e2bbb49d

      Fails because the filename isn't passed to the native API in the long form.
      API has no test coverage

        For Gerrit Dashboard: QTBUG-25629
        # Subject Branch Project Status CR V

            shkearns Shane Kearns
            shkearns Shane Kearns
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes